--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.1.1
   loader_overlay: ^5.0.0
+  go_router: ^16.3.0
+  get_it: ^8.2.0
+  logger: ^2.6.2
 
 dev_dependencies:
   flutter_test:
