--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   go_router: ^16.3.0
   get_it: ^8.2.0
   logger: ^2.6.2
+  media_kit: ^1.2.1
+  media_kit_video: ^1.3.1
+  media_kit_libs_video: ^1.0.7
 
 dev_dependencies:
   flutter_test:
